# AIFT_Vulcan_chat

./: .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .env.example  Dockerfile  Dockerfile.worker  pyproject.toml
backend/app/: entrypoint.py  main.py
backend/app/agents/: executor.py  planner.py
backend/app/core/: auth.py  celery_app.py  config.py  conversation_auth.py  exceptions.py  middleware.py  security.py  storage.py  web_session.py
backend/app/services/: chat_service.py  search_service.py
backend/app/telegram/: bot.py  formatter.py  rate_limiter.py  scheduler.py  storage.py
backend/app/web/: deps.py  main.py
backend/evals/: adversarial_dataset.json  planner_eval_dataset.json  run_planner_eval.py
backend/tests/: conftest.py  test_entrypoint.py
backend/tests/agents/: test_executor.py  test_planner.py
backend/tests/api/: test_chat.py
backend/tests/core/: test_auth.py  test_celery_app.py  test_config.py  test_conversation_auth.py  test_middleware.py  test_security.py  test_storage.py  test_web_session.py
backend/tests/e2e/: test_chat_e2e.py
backend/tests/evals/: test_adversarial.py  test_planner_eval.py
backend/tests/services/: test_chat_service.py  test_openai_client.py  test_search_service.py
backend/tests/telegram/: test_admin_handler.py  test_bot.py  test_chat_handler.py  test_formatter.py  test_link_handler.py  test_multi_conversation_sync.py  test_rate_limiter.py  test_scheduler.py  test_storage.py  test_subscribe_handler.py
backend/tests/web/: test_analysis.py  test_chat.py  test_health.py  (+4 more)
(+118 files in other folders)
